tryna solve scrolling issue on ios

--- a/src/style.scss
+++ b/src/style.scss
@@ -46,9 +46,9 @@ $themes: (
   box-sizing: border-box;
 }
 
-body {
-  overflow: hidden;
-}
+// body {
+//   overflow: hidden;
+// }
 
 :root {
   font-synthesis: none;
